Fix CORS 403 error - Add CorsFilter and allow all origins